==============================================================================

2006-08-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.4 released (SVN tag: release-3-10-4)

	* NEWS: Updated to reflect recent changes (merged rev. 579:581
	from itpp-3-10 branch).

	* itpp/base/bessel.cpp, itpp/base/bessel/jv.cpp,
	itpp/base/bessel/struve.cpp, itpp/base/random.h,
	itpp/protocol/tcp.cpp: Removed most of the "#pragma warning"
	statements needed by MSVC++ .NET compiler (merged rev. 577:578
	from itpp-3-10 branch).
	
	* win32/itpp.vcproj: Added _CRT_SECURE_NO_DEPRECATE and
	_CRT_NONSTDC_NO_DEPRECATE definitions that disable warnings on
	some deprecated C standard library and POSIX-compilant functions
	(merged rev. 577:578 from itpp-3-10 branch).

2006-08-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/parser.cpp, itpp/base/parser.h, tests/parser_test.cpp,
	tests/parser_test_data.txt: Added support for decimal, hexadecimal
	and octal notation in get_int() and get(int) parser functions.
	Also support added for "true" and "false" strings in get_bool()
	and get(bool) functions.
	
2006-08-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/installation.doc: Updated installation manual using
	MSVC++ with MKL.

2006-08-03  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>

	* itpp/signal/transforms.*: Documentation update to comment on the
	the issues with memory alignment for FFTW (cf. bug/feature request
	[1418707]).

2006-08-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.cpp: Changed the way "a:b:c" format is parsed when
	(b = 0) and (a = c). Now it returns "a". Thanks to Erik for
	finding this bug (merged rev. 556:566 from a temporary sandbox
	branch).

2006-08-03  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/rec_syst_conv_code.h: Documentation update (fixes bug
	[1532371]).

2006-07-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/rec_syst_conv_code_test.cpp,